--- a/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -65,21 +65,28 @@
                     </p>
                 </a>
             </li>
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a href="/admin/role" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
                         Role
-                       
                     </p>
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="/admin/account" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                        Danh sách tài khoản
+                    </p>
+                </a>
+            </li>*@
             <li class="nav-item">
                 <a href="/admin/post" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
                         Bài viết
-                        @*<span class="right badge badge-danger">New</span>*@
+                       
                     </p>
                 </a>
             </li>
@@ -87,21 +94,21 @@
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>
-                        Quản lý sản phẩm
+                        Quản lý tài khoản
                         <i class="right fas fa-angle-left"></i>
                     </p>
                 </a>
                 <ul class="nav nav-treeview">
                     <li class="nav-item">
-                        <a href="~/Content/clients/index.html" class="nav-link">
+                        <a href="/admin/account" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
-                            <p>Danh mục v1</p>
+                            <p>Danh sách tài khoản</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Content/clients/index2.html" class="nav-link">
+                        <a href="/admin/role" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
-                            <p>Sản phẩm v2</p>
+                            <p>Role</p>
                         </a>
                     </li>
 
