--- a/BaseProject/Views/ProductUser/Index.cshtml
+++ b/BaseProject/Views/ProductUser/Index.cshtml
@@ -13,24 +13,21 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Category.CategoryName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ProductName)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Description)
-        </th>
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.image)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
         <th>
@@ -38,37 +35,34 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.Created_At)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Updated_At)
-        </th>
+        </th>*@
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Category.CategoryName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ProductName)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Description)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.image)
+            <img style="width:40%" src="@Html.DisplayFor(modelItem => item.image)"/>
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
@@ -76,41 +70,19 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
+        </td>*@
+        @*<td>
             @Html.DisplayFor(modelItem => item.Created_At)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Updated_At)
-        </td>
+        </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            <button class="btn btn-primary add-to-cart" data-product-id="@item.Id">Add to Cart</button>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
 
 </table>
-<script>
-    $(document).ready(function () {
-        $('.add-to-cart').click(function (e) {
-            e.preventDefault();
-            var productId = $(this).data('product-id');
-            var quantity = 1;
-            $.ajax({
-                url: '/Cart/AddToCart',
-                type: 'POST',
-                data: { productId: productId, quantity: quantity },
-                success: function (data) {
-                    alert("Thêm thành công");
-                    // Thực hiện các thay đổi trên giao diện để hiển thị giỏ hàng mới nhất
-                },
-                error: function () {
-                    alert('An error occurred while adding to cart.');
-                }
-            });
-        });
-    });
-</script>
