update Momo Payment and NewController

--- a/BaseProject/Areas/Admin/Views/New/Index.cshtml
+++ b/BaseProject/Areas/Admin/Views/New/Index.cshtml
@@ -37,7 +37,6 @@
 
 <!-- Main content -->
 <section class="content">
-
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
@@ -45,18 +44,19 @@
 
             <div class="card-tools">
                 <a href="/admin/new/create" class="btn btn-primary">Thêm mới</a>
+                <a href="#" class="btn btn-danger" id="BtnDeleteAll">Xóa</a>
             </div>
         </div>
         <div class="card-body">
-            <table class="table table-hover">
+            <table class="table table-hover text-center">
                 <thead>
                     <tr>
+                        <th><input type="checkbox" id="SelectAll" /></th>
                         <th>STT</th>
                         <th>Hình ảnh</th>
-                        <th >Hiển thị</th>
                         <th>Tiêu đề</th>
-
-
+                        <th>Hiển thị</th>
+                        <th style="width:150px;"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,20 +65,15 @@
                         var i = 1;
                         foreach (var item in Model)
                         {
-                            //var strCheck = item.IsActive ? "<a href='#'><i class='fa fa-check text-success'></i> </a>" : "<a href='#'><i class='fas fa-times text-danger'></i> </a>";
-                            var strCheck = item.IsActive ? "<a href='#'><i class='fa fa-check text-success'></i> </a>" : "<a href='#'><i class='fas fa-times text-danger'></i> </a>";
+                            var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
                             <tr id="trow_@item.Id">
-                                <td>
-                                    @i
-                                </td>
+                                <td><input type="checkbox" class="cbkItem" value="@item.Id" /></td>
+                                <td>@i</td>
                                 <td><img src="@item.Images" width="50" /></td>
-                                <td >
-                                    @Html.Raw(strCheck)
-                                </td>
                                 <td>@item.Title</td>
-
-
-
+                                <td>
+                                    <a href='#' data-id="@item.Id" class="btnActive">@Html.Raw(strCheck)</a>
+                                </td>
                                 <td>
                                     <a href="/admin/new/edit/@item.Id" class="btn btn-sm btn-primary">Sửa</a>
                                     <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
@@ -87,8 +82,6 @@
                             i++;
 
                         }
-
-
                     }
                     else
                     {
@@ -115,6 +108,56 @@
 @section scripts{
     <script>
         $(document).ready(function () {
+
+            $('body').on('click', '#BtnDeleteAll', function (e) {
+                e.preventDefault();
+                var str = "";
+                var checkbox = $(this).parents('.card').find('tr td input:checkbox');
+                var i = 0;
+                checkbox.each(function () {
+                    if (this.checked) {
+                        var _id = $(this).val();
+                        if (i === 0) {
+                            str += _id;
+                        } else {
+                            str += "," + _id;
+                        }
+                        i++;
+                    } else {
+                        checkbox.attr('selected', '');
+                    }
+                });
+                if (str.length > 0) {
+                    var conf = confirm('Bạn có muốn xóa các bản ghi này hay không?');
+                    if (conf === true) {
+                        $.ajax({
+                            url: '/admin/new/deleteAll',
+                            type: 'POST',
+                            data: { ids: str },
+                            success: function (rs) {
+                                if (rs.success) {
+                                    location.reload();
+                                }
+                            }
+                        });
+                    }
+                }
+            });
+
+            $('body').on('change', '#SelectAll', function () {
+                var checkStatus = this.checked;
+                var checkbox = $(this).parents('.card-body').find('tr td input:checkbox');
+                checkbox.each(function () {
+                    this.checked = checkStatus;
+                    if (this.checked) {
+                        checkbox.attr('selected', 'checked');
+                    } else {
+                        checkbox.attr('selected', '');
+                    }
+                });
+            });
+
+
             $('body').on('click', '.btnDelete', function () {
                 var id = $(this).data("id");
                 var conf = confirm('Bạn có muốn xóa bản ghi này không?');
@@ -128,10 +171,33 @@
                                 $('#trow_' + id).remove();
                             }
                         }
-
                     });
                 }
             });
+
+            $('body').on('click', '.btnActive', function (e) {
+                e.preventDefault();
+                var btn = $(this);
+                var id = btn.data("id");
+                $.ajax({
+                    url: '/admin/new/IsActive',
+                    type: 'POST',
+                    data: { id: id },
+                    success: function (rs) {
+                        if (rs.success) {
+                            if (rs.isAcive) {
+                                btn.html("<i class='fa fa-check text-success'></i>");
+                                //$(this).find("i").removeClass("fas fa-times text-danger")
+                                //$(this).find("i").addClass("fa fa-check text-success");
+                            } else {
+                                btn.html("<i class='fas fa-times text-danger'></i>");
+                            }
+                        }
+
+                    }
+                });
+            });
+
         });
     </script>
 }
