--- a/BaseProject/Areas/Admin/Views/New/Create.cshtml
+++ b/BaseProject/Areas/Admin/Views/New/Create.cshtml
@@ -63,18 +63,6 @@
                         @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Tiêu đề" } })
                         @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                     </div>
-                    @*<div class="form-group">
-            <div class="row">
-                <div class="col-6">
-                    <label for="exampleInputPassword1">Ảnh</label>
-                    @Html.TextAreaFor(model => model.Images, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-3">
-                    <input type="button" id="browserClick" value="Tải ảnh" />
-                </div>
-            </div>
-        </div>*@
                     <div class="form-group">
                         <label for="exampleInputFile">Ảnh đại diện</label>
                         <div class="input-group">
@@ -98,8 +86,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Hiển thị</label>
-                        @Html.CheckBoxFor(model => model.IsActive)
-                        @*@Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })*@
+                        @Html.CheckBoxFor(x => x.IsActive, new { @checked = "@checked" })
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Category</label>
