--- a/BaseProject/Views/Order/CheckOut.cshtml
+++ b/BaseProject/Views/Order/CheckOut.cshtml
@@ -50,31 +50,49 @@
     </div>
 
     <div class="form-group">
+            @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    @*<div class="form-group">
         @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
+            <label class="radio-inline">
+                Momo
+                @Html.RadioButtonFor(model => model.Payment, "momo", new { @class = "form-control" })
+
+            </label>
+            <label class="radio-inline">
+                Case
+                @Html.RadioButtonFor(model => model.Payment, "case", new { @class = "form-control" })
+
+            </label>
             @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
+
+
 
     @*@foreach (var item in ViewBag.Carts as List<BaseProject.Models.EF.CartItem>)
-    {
-        <tr>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-           
-          
-        </tr>
-    }*@
+        {
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+
+
+            </tr>
+        }*@
 
     @*<div class="form-group">
             @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -114,8 +132,8 @@
         </div>
     </div>
 </div>
-}
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index","Cart")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index", "Cart")
+    </div>
