--- a/BaseProject/Areas/Admin/Views/Account/Create.cshtml
+++ b/BaseProject/Areas/Admin/Views/Account/Create.cshtml
@@ -21,7 +21,7 @@
 <section class="content">
 
     <!-- Default box -->
-    <div class="card">
+    <div class="card card-info">
         <div class="card-header">
             <h3 class="card-title">Thêm mới tài khoản</h3>
 
@@ -60,7 +60,8 @@
                     @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Thêm mới</button>
+                    
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-thumbs-up"></i></button>
                 </div>
             }
         </div>
