--- a/BaseProject/Areas/Admin/Views/Account/Index.cshtml
+++ b/BaseProject/Areas/Admin/Views/Account/Index.cshtml
@@ -22,12 +22,12 @@
 <section class="content">
 
     <!-- Default box -->
-    <div class="card">
+    <div class="card card-info">
         <div class="card-header">
             <h3 class="card-title">Danh sách tài khoản</h3>
 
             <div class="card-tools">
-                <a href="/admin/account/create" class="btn btn-success">Thêm mới</a>
+                <a href="/admin/account/create" class="btn btn-file"><i class="fa fa-plus-circle"></i></a>
             </div>
         </div>
         <div class="card-body">
@@ -53,8 +53,7 @@
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
                                 <td>
-                                    <a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary">Sửa</a>
-                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger btnDelete"><i class="fa fa-trash"></i></a>
                                 </td>
                             </tr>
                             i++;
