--- a/BaseProject/Areas/Admin/Views/Category/Edit.cshtml
+++ b/BaseProject/Areas/Admin/Views/Category/Edit.cshtml
@@ -22,7 +22,7 @@
     </ul>
 }
 <!-- Content Header (Page header) -->
-<section class="content-header">
+<!--<section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
@@ -35,14 +35,14 @@
                 </ol>
             </div>
         </div>
-    </div><!-- /.container-fluid -->
-</section>
+    </div>--><!-- /.container-fluid -->
+<!--</section>-->
 
 <!-- Main content -->
 <section class="content">
 
     <!-- Default box -->
-    <div class="card">
+    <div class="card card-info">
         <div class="card-header">
             <h3 class="card-title">Thông tin danh mục</h3>
 
@@ -78,11 +78,13 @@
                     @Html.ValidationMessageFor(model => model.UpdatedAt, "", new { @class = "text-danger" })
                 </div>*@
 
-                        <div class="form-group">
-                            <a href="/admin/category" class="btn btn-danger">Quay lại</a>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="form-group">
+                        <a href="/admin/category" class="btn btn-danger"><i class="fa fa-arrow-left"></i></a>
 
-                        </div>
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-thumbs-up"></i></button>
+
+
+                    </div>
                     </div>
 
                 }
