--- a/BaseProject/Areas/Admin/Views/New/Edit.cshtml
+++ b/BaseProject/Areas/Admin/Views/New/Edit.cshtml
@@ -24,7 +24,7 @@
     </ul>
 }
 <!-- Content Header (Page header) -->
-<section class="content-header">
+<!--<section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
@@ -37,14 +37,14 @@
                 </ol>
             </div>
         </div>
-    </div><!-- /.container-fluid -->
-</section>
+    </div>--><!-- /.container-fluid -->
+<!--</section>-->
 
 <!-- Main content -->
 <section class="content">
 
     <!-- Default box -->
-    <div class="card">
+    <div class="card card-info">
         <div class="card-header">
             <h3 class="card-title">Thông tin Cập nhật Tin tức</h3>
 
@@ -99,8 +99,11 @@
 
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Lưu</button>
-                        <a href="/admin/new" class="btn btn-danger">Quay lại</a>
+                        
+
+                        <a href="/admin/new" class="btn btn-danger"><i class="fa fa-arrow-left"></i></a>
+
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-thumbs-up"></i></button>
 
 
                     </div>
