--- a/BaseProject/Areas/Admin/Views/Role/Create.cshtml
+++ b/BaseProject/Areas/Admin/Views/Role/Create.cshtml
@@ -22,7 +22,7 @@
 <section class="content">
 
     <!-- Default box -->
-    <div class="card">
+    <div class="card card-info">
         <div class="card-header">
             <h3 class="card-title">Thêm mới Quyền</h3>
 
@@ -37,7 +37,7 @@
                     @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Thêm mới</button>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-thumbs-up"></i></button>
                 </div>
             }
         </div>
