--- a/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -2,11 +2,23 @@
 <div class="sidebar">
     <!-- Sidebar user (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
+        @*<div class="image">
             <img src="~/Content/clients/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
             <a href="#" class="d-block">Alexander Pierce</a>
+        </div>*@
+
+        <div class="image">
+            <img src="/Content/clients/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
+        </div>
+        <div class="info">
+            <a href="#" class="d-block">
+                @User.Identity.Name
+            </a>
+            <span class="badge bg-danger">
+                Admin
+            </span>
         </div>
     </div>
 
@@ -29,70 +41,24 @@
     with font-awesome or any other icon font library -->
             <li class="nav-item">
                 <a href="/admin/Category" class="nav-link">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-list-alt"></i>
                     <p>
-                        Danh Mục
-                        @*<i class="right fas fa-angle-left"></i>*@
+                        Danh Mục                        
                     </p>
                 </a>
-                @*<ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="~/Content/clients/index.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Dashboard v1</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="~/Content/clients/index2.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Dashboard v2</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="~/Content/clients/index3.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Dashboard v3</p>
-                    </a>
-                </li>
-            </ul>*@
+                
             </li>
             <li class="nav-item">
                 <a href="/Admin/new" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
+                    <i class="nav-icon fas fa-file-alt"></i>
                     <p>
-                        Tin Tức
-                        @*<span class="right badge badge-danger">New</span>*@
+                        Tin Tức                       
                     </p>
                 </a>
-            </li>
-            @*<li class="nav-item">
-                <a href="/admin/role" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Role
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/admin/account" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Danh sách tài khoản
-                    </p>
-                </a>
-            </li>*@
-            <li class="nav-item">
-                <a href="/admin/post" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Bài viết
-                       
-                    </p>
-                </a>
-            </li>
+            </li>           
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-users"></i>
                     <p>
                         Quản lý tài khoản
                         <i class="right fas fa-angle-left"></i>
@@ -109,6 +75,12 @@
                         <a href="/admin/role" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Role</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/admin/role/setrole" class="nav-link">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Set Role</p>
                         </a>
                     </li>
 
