--- a/BaseProject/Views/Order/CheckOut.cshtml
+++ b/BaseProject/Views/Order/CheckOut.cshtml
@@ -48,30 +48,37 @@
             @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
-            @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    @*<div class="form-group">
         @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <label class="radio-inline">
-                Momo
-                @Html.RadioButtonFor(model => model.Payment, "momo", new { @class = "form-control" })
-
-            </label>
-            <label class="radio-inline">
-                Case
-                @Html.RadioButtonFor(model => model.Payment, "case", new { @class = "form-control" })
-
-            </label>
+            @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
         </div>
-    </div>*@
+    </div>
+    @*<div class="form-group">
+            @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <label class="radio-inline">
+                    Momo
+                    @Html.RadioButtonFor(model => model.Payment, "momo", new { @class = "form-control" })
+
+                </label>
+                <label class="radio-inline">
+                    Case
+                    @Html.RadioButtonFor(model => model.Payment, "case", new { @class = "form-control" })
+
+                </label>
+                @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
 
 
